--- a/app/views/contributions/index.html.erb
+++ b/app/views/contributions/index.html.erb
@@ -1,1 +1,6 @@
 Hello World!!
+
+<%= link_to "#", "#"%>
+<%= link_to "show", "contribution_path"%>
+<%= link_to "new", "new_contribution_path" %>
+<%= link_to "新規登録", "/users/sign_up"%>
