--- a/app/views/contributions/index.html.erb
+++ b/app/views/contributions/index.html.erb
@@ -1,6 +1,7 @@
 Hello World!!
 
-<%= link_to "#", "#"%>
+<%= link_to "user", "user_path" %>
 <%= link_to "show", "contribution_path"%>
 <%= link_to "new", "new_contribution_path" %>
 <%= link_to "新規登録", "/users/sign_up"%>
+<%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
