--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,13 +5,31 @@
 
   <div class="field">
     <%= f.label :nickname %><br />
-    <%= f.email_field :nickname, autofocus: true, autocomplete: "nickname" %>
+    <%= f.text_field :nickname, autofocus: true, autocomplete: "nickname" %>
   </div>
 
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
+
+  <%= f.fields_for :profiles do |profile| %>
+    <div class="field">
+      <%= profile.label :gender %><br />
+      <%= profile.text_field :gender, autocomplete: "off" %>
+    </div>
+
+    <div class="field">
+      <%= profile.label :sports %><br />
+      <%= profile.text_field :sports, autocomplete: "off" %>
+    </div>
+
+    <div class="field">
+      <%= profile.label :study_fields %><br />
+      <%= profile.text_field :study_fields, autocomplete: "off" %>
+    </div>
+
+  <% end %>
 
   <div class="field">
     <%= f.label :password %>
