--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,10 @@
 @import "reset.scss";
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
+@import "mixins/mixin";
+@import "modules/header.scss";
 @import "modules/top_page";
+@import "modules/index";
 
 
 body {
