--- a/app/assets/stylesheets/modules/top_page.scss
+++ b/app/assets/stylesheets/modules/top_page.scss
@@ -1,6 +1,5 @@
 .top-page {
-  height: 100vh;
-  width: 100%;
+  @include display;
   background: image-url("top_page.jpg");
   background-size: cover;
   text-align: center;
