--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,6 +5,7 @@
 @import "modules/header.scss";
 @import "modules/top_page";
 @import "modules/index";
+@import "modules/show";
 @import "modules/new-edit";
 
 
