--- a/app/views/contributions/index.html.erb
+++ b/app/views/contributions/index.html.erb
@@ -3,13 +3,26 @@
     <div class="index__box">
       <%= link_to "/contributions/#{contribution.id}" do %>
         <div class="index__box__image">
-          <%= image_tag contribution.image.url %>
+          <% if contribution.image.present? %>
+            <%= image_tag contribution.image.url %>
+          <% else %>
+            <div class="image-none"></div>
+          <% end %>
         </div>
         <div class="index__box__description">
           <%= contribution.title %>
         </div>
-        </ul>
       <% end %>
     </div>
   <%end%>
 </section>
+
+
+<%= link_to "マイページ", "user_path" %>
+<%= link_to "index", contributions_path %>
+<%= link_to "show", "contribution_path" %>
+<%= link_to "投稿する", new_contribution_path %>
+<%= link_to "新規登録", "/signup/signup_1" %>
+<%= link_to "ログイン", new_user_session_path %>
+<%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+
