--- a/app/assets/stylesheets/modules/index.scss
+++ b/app/assets/stylesheets/modules/index.scss
@@ -2,13 +2,19 @@
   @include display;
   background-color: #f5f5f5;
   &__box {
-    background-color: black;
-    height: auto;
-    width: auto;
+    background-color: skyblue;
     margin: 10px;
+    display: flex;
     &__image {
-      position: relative;
+      
       img {
+        width: 50%;
+        height: 20%;
+      }
+      .image-none {
+        background-color: white;
+        width: 50%;
+        height: 20%;
       }
     }
     &__discription {
