--- a/app/views/contributions/show.html.erb
+++ b/app/views/contributions/show.html.erb
@@ -1,9 +1,29 @@
-
-<%= link_to "マイページ", "user_path" %>
-<%= link_to "index", contributions_path %>
-<%= link_to "show", "contribution_path" %>
-<%= link_to "投稿する", new_contribution_path %>
-<%= link_to "新規登録", "/signup/signup_1" %>
-<%= link_to "ログイン", new_user_session_path %>
-<%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-
+<section class="show">
+  <div class="show__box">
+    <div class="show__box__image">
+      <div class="show__box__image__url">
+        <%= image_tag @contribution.image.url, class: "show__box__image__url__picture" %>
+      </div>
+      <div class="show-contribution">
+        <div class="show-contribution__title">
+          <%= @contribution.title %>
+        </div>
+        <div class="show-contribution__text">
+          <%= @contribution.text %>
+        </div>
+      </div>
+    </div>
+    <div class="show__box__comment">
+      <div class="show__box__comment__index">
+        <% 10.times do %>
+          <h1 class="comment">yoooo!!</h1>
+        <% end %>
+      </div>
+    <div class="show__box__right__comment__fprm">
+      <%= form_with(model: @contribution, local: true, class:"show__box__right__comment__fprm__with") do |form| %>
+        <%= form.text_area :title %>
+        <%= form.submit "コメントする", id: :"comment-btn" %>
+      <% end %>
+    </div>
+  </div>
+</section>
