--- a/app/assets/stylesheets/modules/show.scss
+++ b/app/assets/stylesheets/modules/show.scss
@@ -3,11 +3,11 @@
   padding: 20px 0;
   background-color: #f5f5f5;
   .show-contribution {
-    height: 400px;
+    height: 300px;
     width: 70%;
     min-width: 50%;
     margin: 0 auto 20px;
-    background-size: cover;
+    background-size: 100%;
     border: solid 1px rgb(238, 185, 185);
     border-radius: 5px;
     overflow: scroll;
@@ -21,6 +21,7 @@
         background-color: rgba(255,255,255,0.7);
       }
       &__text {
+        height: 100vh;
         font-size: 18px;
         padding: 0 10px 10px;
         background-color: rgba(255,255,255,0.7);
@@ -32,18 +33,34 @@
     min-width: 50%;
     margin: 0 auto;
     &__form {
-      width: 70%;
-      min-width: 50%;
-      margin: 0 auto;
+      display: block;
       &__with {
-        width: 100%;
         #contribution_text {
-        
-        height: 100px;
+          height: 80px;
+          width: 100%;
+          resize: none;
+          border: solid 1px rgb(238, 185, 185);
+          border-radius: 5px;
         }
         #comment-btn {
-          display: block;
+          font-size: 18px;
+          height: 30px;
+          width: 100%;
+          border-radius: 5px;
+          margin: 10px 0;
+          color: white;
+          background-color: rgb(252, 90, 117);
         }
+      }
+    }
+    &__index {
+      border: solid 1px rgb(238, 185, 185);
+      height: 230px;
+      width: 100%;
+      overflow: scroll;
+      margin: 5px 0 0;
+      .comment {
+        line-height: 20px;
       }
     }
   }
