--- a/app/assets/stylesheets/modules/show.scss
+++ b/app/assets/stylesheets/modules/show.scss
@@ -7,25 +7,26 @@
     width: 70%;
     min-width: 50%;
     margin: 0 auto 20px;
-    background-size: 100%;
+    background-size: contain;
     border: solid 1px rgb(238, 185, 185);
     border-radius: 5px;
     overflow: scroll;
+    cursor: pointer;
     &__box {
-      @include display;
+      background-color: rgba(255,255,255,0.8);
       &__title {
         font-size: 24px;
         font-weight: 700;
         text-align: center;
         padding: 10px 0 0;
-        background-color: rgba(255,255,255,0.7);
       }
       &__text {
-        height: 100vh;
         font-size: 18px;
         padding: 0 10px 10px;
-        background-color: rgba(255,255,255,0.7);
       }
+    }
+    .none {
+      display: none;
     }
   }
   .show-comment {
@@ -50,6 +51,13 @@
           margin: 10px 0;
           color: white;
           background-color: rgb(252, 90, 117);
+          transition:all .3s ease;
+        }
+        #comment-btn:hover {
+          height: 35px;
+          color:rgb(252, 90, 117);
+          background-color: white;
+          border: 2px solid rgb(252, 90, 117);
         }
       }
     }
@@ -57,6 +65,7 @@
       border: solid 1px rgb(238, 185, 185);
       height: 230px;
       width: 100%;
+      background-color: white;
       overflow: scroll;
       margin: 5px 0 0;
       .comment {
