--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,5 +12,15 @@
 
   <body>
     <%= yield %>
+  
   </body>
+  
+    <%= link_to "マイページ", "user_path" %>
+    <%= link_to "index", contributions_path %>
+    <%= link_to "show", "contribution_path" %>
+    <%= link_to "投稿する", new_contribution_path %>
+    <%= link_to "新規登録", "/signup/signup_1" %>
+    <%= link_to "ログイン", new_user_session_path %>
+    <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+  
 </html>
