--- a/app/views/contributions/index.html.erb
+++ b/app/views/contributions/index.html.erb
@@ -8,6 +8,7 @@
           </div>
           <ul class="index-review">
             <li class="index-review__list"><i class="far fa-heart"></i>：●●</li>
+            <li class="index-review__list">コメント：●●</li>
           </ul>
         </div>
       <% end %> 
