--- a/app/assets/stylesheets/modules/index.scss
+++ b/app/assets/stylesheets/modules/index.scss
@@ -12,7 +12,7 @@
       &__image {
         height: 400px;
         background-size: cover;
-        background-position: center;
+        background-position: center center;
         border-radius: 5px;
         width: 100%;
         margin: 20px 0;
