--- a/app/assets/stylesheets/modules/index.scss
+++ b/app/assets/stylesheets/modules/index.scss
@@ -34,6 +34,8 @@
             background-color: rgba(255,255,255,0.8);
             border: rgb(62, 62, 250)  1px solid;
             border-radius: 15px;
+            overflow-y: scroll;
+            padding: 0 10px;
           }
         }
         .index-review {
