--- a/app/assets/stylesheets/modules/show.scss
+++ b/app/assets/stylesheets/modules/show.scss
@@ -109,7 +109,9 @@
           transition:all .3s ease;
         }
         #comment-btn:hover {
-          height: 35px;
+          cursor: pointer;
+          font-size: 20px;
+          height: 40px;
           color:rgb(252, 90, 117);
           background-color: white;
           border: 2px solid rgb(252, 90, 117);
