--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,28 @@
-<section class="user-show">
-  <div class="user-show__title">
-    <h1 class="user-show__title__top">プロフィール画面<h1>
-  </div>
-  <%= render partial: "user-profile", local: {user: @user} %>
+<section class="user">
+  <section class="user-show">
+    <div class="user-show__title">
+      <h1 class="user-show__title__top">プロフィール画面<h1>
+    </div>
+    <%= render partial: "user-profile", local: {user: @user} %>
+  </section>
+
+  <section class="user-index">
+    <div class="user-index-field">
+      <% @user.contributions.each do |contribution| %>
+        <%= link_to "/contributions/#{contribution.id}", class: :"user-index-field__box" do %>
+          <div class="user-index-field__box__image" style="background-image: url(<%= contribution.image %>);">
+            <div class="user-index-title">
+              <h1 class="user-index-title__text"><%= contribution.title %></h1>
+            </div>
+            <ul class="user-index-review">
+              <li class="user-index-review__list"><i class="far fa-heart"></i>：●●</li>
+              <li class="user-index-review__list">コメント：●●</li>
+            </ul>
+          </div>
+        <% end %>
+      <%end%>
+    </div>
+  </section>
+
+
 </section>
