--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,15 +2,18 @@
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
 @import "mixins/mixin";
-@import "modules/header.scss";
+@import "users";
+@import "modules/header";
 @import "modules/top_page";
 @import "modules/index";
 @import "modules/show";
 @import "modules/new-edit";
-@import "modules/users";
-
 
 body {
   padding: 0;
   margin: 0;
+}
+
+.link {
+  bottom: 0;
 }
