--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,7 @@
 @import 'font-awesome';
 @import "mixins/mixin";
 @import "users";
+@import "signup";
 @import "modules/header";
 @import "modules/top_page";
 @import "modules/index";
