--- a/app/views/signup/done.html.erb
+++ b/app/views/signup/done.html.erb
@@ -1,23 +1,25 @@
 <section class="done">
   <div class="done__finish">
-    <h1 class="done__finish__registration">ご登録ありがとうございます<h1>
-    <%= link_to "/users/#{current_user.id}" do %>
-      <div class="done-circle">
-        <h1 class="done-circle__title">マイページ<h1>
-        <i class="fas fa-dragon"></i>
-      <div>
-    <% end %>
-    <%= link_to contributions_path do %>
-      <div class="done-circle">
-        <h1 class="done-circle__title">一覧ページ<h1>
-        <i class="fas fa-horse"></i>
-      <div>
-    <% end %>
-    <%= link_to new_contribution_path do %>
-      <div class="done-circle">
-        <h1 class="done-circle__title">投稿画面<h1>
-        <i class="fas fa-dove"></i>
-      <div>
-    <% end %>
+    <h1 class="done__finish__registration">ご登録ありがとうございます</h1>
+    <ul class="circle">
+      <%= link_to "/users/#{current_user.id}" do %>
+       <li class="done-circle">
+          <h1 class="done-circle__title">マイページ<h1>
+          <i class="fas fa-dragon"></i>
+       </li>
+      <% end %>
+      <%= link_to contributions_path do %>
+        <li class="done-circle">
+          <h1 class="done-circle__title">一覧ページ<h1>
+          <i class="fas fa-horse"></i>
+        </li>
+      <% end %>
+      <%= link_to new_contribution_path do %>
+        <li class="done-circle">
+          <h1 class="done-circle__title">投稿画面<h1>
+          <i class="fas fa-dove"></i>
+        </li>
+      <% end %>
+    </ul>
   </div>
 </section>
